--- a/projetoagenda/templates/model-header.html
+++ b/projetoagenda/templates/model-header.html
@@ -1,4 +1,7 @@
 
     <title>Agenda</title>
     <meta charset="utf-8">
+    <div align="right">
+    <a href="/logout">logout</a>
+    </div>
     <h1>Agenda</h1>
